wow the whitespace bugs are funky but im publishing this

--- a/assets/themes/jon/css/screen.css
+++ b/assets/themes/jon/css/screen.css
@@ -23,6 +23,8 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
+  margin-bottom: 1em;
+  margin-top: 1em;
   font-size: 100%;
 }
 
@@ -87,13 +89,14 @@ ul.posts {
 }
 
 .title {
-  color: #a00;
+  color: #007200;
   font-weight: bold;
   margin-bottom: 2em;
+  font-size: larger;
 }
 
   .site .title a {
-    color: #a00;
+    color: #007200;
     text-decoration: none;
   }
 
@@ -105,6 +108,7 @@ ul.posts {
     color: #aaa;
     text-decoration: none;
     margin-left: 1em;
+    font-size: smaller;
   }
 
   .site .title a.extra:hover {
@@ -118,7 +122,7 @@ ul.posts {
   .site .footer {
     font-size: 80%;
     color: #666;
-    border-top: 4px solid #eee;
+    border-top: 4px dashed #eee;
     margin-top: 2em;
     overflow: hidden;
   }
@@ -128,13 +132,8 @@ ul.posts {
       margin-right: 3em;
     }
 
-      .site .footer .contact a {
-        color: #8085C1;
-      }
-
     .site .footer .rss {
       margin-top: 1.1em;
-      margin-right: -.2em;
       float: right;
     }
 
@@ -192,6 +191,63 @@ ul.posts {
   margin-top: 2em;
 }
 
-  #related h2 {
-    margin-bottom: 1em;
-  }
+#related h2 {
+  margin-bottom: 1em;
+}
+
+
+
+/*****************************************************************************/
+/*
+/* Backgrounds
+/*
+/*****************************************************************************/
+
+body {
+
+  background-repeat:no-repeat;
+  background-attachment:fixed;
+
+  /* ie10 consumer preview */ 
+  background-image: -ms-linear-gradient(top, #ffffff 0%, #dddddd 100%);
+
+  /* mozilla firefox */ 
+  background-image: -moz-linear-gradient(top, #ffffff 0%, #dddddd 100%);
+
+  /* opera */ 
+  background-image: -o-linear-gradient(top, #ffffff 0%, #dddddd 100%);
+
+  /* webkit (safari/chrome 10) */ 
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #ffffff), color-stop(1, #dddddd));
+
+  /* webkit (chrome 11+) */ 
+  background-image: -webkit-linear-gradient(top, #ffffff 0%, #dddddd 100%);
+
+  /* w3c markup, ie10 release preview */ 
+  background-image: linear-gradient(to bottom, #ffffff 0%, #dddddd 100%);
+
+}
+
+
+/*****************************************************************************/
+/*
+/* Ribbons and badges 
+/*
+/*****************************************************************************/
+
+.github-ribbon {
+  opacity:0.4;
+  filter:alpha(opacity=40);
+}
+
+#post .contact {
+  display: none;
+}
+
+.typekit-badge {
+  display: none !important;
+}
+
+.pin-title { font-size:1em;text-decoration:none;color:#00a}
+.pin-description { color:#555; }
+.pin-tag { color:#18c;text-decoration:none;font-size:0.9em; }
